fix: disable region word wrap

--- a/kpd-public.css
+++ b/kpd-public.css
@@ -411,9 +411,8 @@ input:checked + .sliderSml:after {
 #menuRegionLabel {
 	margin-right: 5px;
 	margin-left: 5px;
-}
 
-#menuRegionLabel {
+	white-space: nowrap;
 }
 
 #menuPingText {
